# tatchi

./: .gitignore  README.md  npm_link_sdk.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  deploy-cloudflare.yml  deploy-docs-dev.yml  deploy-docs-mainnet.yml  deploy-docs-prod.yml  deploy-docs-staging.yml  deploy-relay-mainnet.yml  deploy-relay-prod.yml  deploy-relay-staging.yml  deploy-separate-wallet-host.yml  deploy-wallet-iframe-mainnet.yml  deploy-wallet-iframe-prod.yml  deploy-wallet-iframe-staging.yml  deploy-zk-email-cloudflare-worker.yml  publish-sdk-r2.yml  sdk-tarball.yml
apps/tatchi-wallet-extension/: README.md  manifest.json  package.json  service-worker.js  sidepanel.html  sidepanel.js  wallet-service.html  wallet-service.js
builds/0.9.0/: tatchi-sdk-0.9.0.tar.gz.sha256  tatchi-sdk-0.9.0.tar.gz.sri
docs/: asset-url-resolution.md  awaitSecureConfirmation-refactor-plan.md  chain-intents.md  chainsigs-docs.md  chainsigs-eg2.md  chrome-extension-upgrade.md  cloudflare-github-actions-setup.md  cloudflare-wasm-imports.md  conditional-webauthn.md  confirmTxFlow-refactor.md  css-variable-consistency.md  custom-themes.md  delegate-actions.md  dkg.md  dns-hardening.md  email-recovery-flow.md  enterprise.md  export-private-key-drawer-implementation-plan.md  github-workflows.md  global-contracts-for-sdk.md  header-plugins-general.md  iphone-dev.md  lazy-load.md  lit-component-improvements.md  lit-styles-refactor.md  login-auth-sessions.md  mdx-docs.md  mpc-lite.md  mpc-refactor-review.md  mpc-signing-refactor.md  neobank.md  nextra-native.md  nonce-scaling.md  offline-export.md  outlayer-bug.md  passkey-manager-modes.md  playwright-headers.md  production-deployment.md  reduce-logs.md  refactor-chainsigs.md  (+50 more)
docs/deployment/: cloudflare-github-actions-setup.md  cloudflare-wasm-imports.md  deployment-overview.md  release.md
docs/iphone-dev/: safari-address-bar-fix.md
docs/security-checklist/: 00-security-checklist.md  01-messaging-isolation.md  02-webauthn-prf.md  03-confirmation-ux.md  04-crypto-and-keys.md  05-storage-logs-privacy.md  06-supply-chain-deploy.md  07-relay-cloudflare.md  08-tests-to-add.md
examples/chrome-extension/: .gitignore  README.md  manifest.json  service-worker.js  sidepanel.html  wallet-confirm.html  wallet-popup.html  wallet-service.html
examples/next-js/: Caddyfile  README.md  next.config.js  package.json  run_caddy.sh  wallet.vite.config.ts
examples/relay-cloudflare-worker/: README.md  package.json  worker-configuration.d.ts  wrangler.toml
examples/relay-server/: README.md  env.example  package.json
examples/svelte/: Caddyfile  README.md  index.html  package.json  vite.config.ts  (+1 more)
frontend/: Caddyfile  package.json  pnpm-lock.yaml  run_caddy.sh  tsconfig.tsbuildinfo  vite.config.ts
passkey-sdk/: .gitignore  README.md  build-paths.sh  build-paths.ts  package.json  playwright.config.ts  rolldown.config.ts
relay-server/: README.md  env.example  package.json  pnpm-lock.yaml  tsconfig.json
sdk/: README.md  build-paths.sh  build-paths.ts  package.json  playwright.config.ts  playwright.relayer.config.ts  rolldown.config.ts  tsconfig.build.json
sdk/src/wasm_signer_worker/: Cargo.toml
sdk/src/wasm_signer_worker/src/: actions.rs  config.rs  cose.rs  crypto.rs  encoders.rs  error.rs  fetch.rs  lib.rs  logger.rs  rpc_calls.rs  transaction.rs  wrap_key_handshake.rs
sdk/src/wasm_signer_worker/src/handlers/: confirm_tx_details.rs  handle_check_can_register_user.rs  handle_decrypt_private_key_with_prf.rs  handle_derive_near_keypair_and_encrypt.rs  handle_recover_keypair_from_passkey.rs  handle_register_device2_with_derived_key.rs  handle_request_registration_credential_confirmation.rs  handle_sign_add_key_threshold_public_key_no_prompt.rs  handle_sign_delegate_action.rs  handle_sign_nep413_message.rs  handle_sign_transaction_with_keypair.rs  handle_sign_transactions_with_actions.rs  handle_threshold_ed25519_derive_client_verifying_share.rs  mod.rs
sdk/src/wasm_signer_worker/src/tests/: actions_tests.rs  cose_tests.rs  crypto_tests.rs  frost_compat_tests.rs  guard_tests.rs  mod.rs  rpc_calls_tests.rs  transaction_tests.rs
sdk/src/wasm_signer_worker/src/threshold/: coordinator.rs  mod.rs  participant_ids.rs  protocol.rs  relayer_http.rs  signer_backend.rs  threshold_client_share.rs  threshold_digests.rs  threshold_frost.rs  transport.rs
sdk/src/wasm_signer_worker/src/types/: crypto.rs  deserializers.rs  handlers.rs  mod.rs  near.rs  participants.rs  progress.rs  signing.rs  wasm_to_json.rs  webauthn.rs  worker_messages.rs
sdk/src/wasm_vrf_worker/: Cargo.toml
sdk/src/wasm_vrf_worker/src/: await_secure_confirmation.rs  config.rs  errors.rs  fetch.rs  http.rs  lib.rs  logger.rs  manager.rs  rpc_calls.rs  tests.rs  utils.rs  webauthn.rs  wrap_key_seed_port.rs
sdk/src/wasm_vrf_worker/src/handlers/: handle_check_session_status.rs  handle_clear_session.rs  handle_confirm_and_prepare_signing_session.rs  handle_decrypt_session.rs  handle_derive_vrf_keypair_from_prf.rs  handle_derive_wrap_key_seed_and_session.rs  handle_device2_registration_session.rs  handle_dispense_session_key.rs  handle_generate_vrf_challenge.rs  handle_generate_vrf_keypair_bootstrap.rs  handle_get_session_status.rs  handle_mint_session_keys_and_send_to_signer.rs  handle_registration_credential_confirmation.rs  handle_shamir3pass_client.rs  handle_shamir3pass_config.rs  handle_shamir3pass_server.rs  handle_unlock_vrf_keypair.rs  mod.rs
sdk/src/wasm_vrf_worker/src/shamir3pass/: mod.rs  tests_unit.rs
sdk/src/wasm_vrf_worker/src/types/: http.rs  mod.rs  worker_messages.rs
(+1874 files in other folders)
