[package]
name = "wasm_signer_worker"
version = "0.4.3"
edition = "2021"
description = "Web3Authn Signer worker"
repository = "https://github.com/web3-authn/sdk"
license = "Apache-2.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

# Leaner release builds for smaller WASM size
# Maximize size reduction
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# Empty workspace to make this package independent
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
bs58 = "0.5"
base64ct = { version = "1.6", features = ["alloc"] }
borsh = { version = "1.3", features = ["derive"] }
chacha20poly1305 = "0.10"
ciborium = "0.2" # CBOR parsing for WebAuthn COSE keys
curve25519-dalek = { version = "=4.1.3", features = ["rand_core", "zeroize"] }
# For NEAR key generation and transaction signing
ed25519-dalek = { version = "2.1", default-features = false, features = ["rand_core"] }
frost-ed25519 = { version = "2.2", default-features = false, features = ["serialization", "std"] }
getrandom = { version = "0.2.15", features = ["js"] }
hkdf = "0.12"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
log = { version = "0.4", features = ["release_max_level_info"] }

# WASM HTTP dependencies
web-sys = { version = "0.3", features = [
  "MessageEvent",
  "MessagePort"
] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[features]
default = []
