[package]
name = "wasm_vrf_worker"
version = "0.1.0"
edition = "2021"
description = "Web3Authn VRF (Verifiable Random Function) worker with Shamir 3-pass protocol support"
repository = "https://github.com/web3-authn/web3-authn-sdk"
license = "Apache-2.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[lib]
crate-type = ["cdylib"]

[dependencies]
base64ct = { version = "1.6", features = ["alloc"] }
bincode = "1.3"
chacha20poly1305 = "0.10"
console_error_panic_hook = "0.1"
ed25519-dalek = "2.0"
getrandom = { version = "0.2", features = ["js"] }
hkdf = "0.12"
js-sys = "0.3"
rand_core = "0.6"
sha2 = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
zeroize = { version = "1.7", features = ["derive"] }
# VRF and cryptography
vrf-wasm = { version = "0.8.2", features = ["browser"] }
# Logging dependencies
log = "0.4"
wasm-logger = "0.2"
# Shamir3Pass
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"
rand = "0.8"
wasm-bindgen-futures = "0.4" # Async HTTP support
# Base58 encoding/decoding
bs58 = "0.5"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Headers",
  "Request",
  "RequestInit",
  "Response",
  "Window",
]