[package]
name = "wasm_vrf_worker"
version = "0.4.1"
edition = "2021"
description = "Web3Authn VRF (Verifiable Random Function) worker with Shamir 3-pass protocol support"
repository = "https://github.com/web3-authn/web3-authn-sdk"
license = "Apache-2.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[profile.release]
# Maximize size reduction
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64ct = { version = "1.6", features = ["alloc"] }
bincode = "1.3"
chacha20poly1305 = "0.10"
getrandom = { version = "0.2", features = ["js"] }
hkdf = "0.12"
js-sys = "0.3"
rand_core = "0.6"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
zeroize = { version = "1.7", features = ["derive"] }
# VRF and cryptography
vrf-wasm = { version = "0.9.1", features = ["browser"] }
# Logging dependencies
log = { version = "0.4", features = ["release_max_level_info"] }
# Shamir3Pass
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
wasm-bindgen-futures = "0.4" # Async HTTP support
# Base58 encoding/decoding
bs58 = "0.5"

[dependencies.web-sys]
version = "0.3"
features = [
  "MessagePort",
]

[dev-dependencies]
futures = "0.3"
